package com.viktorkuts.events.domainclientlayer.customers;

public enum CustomerType {
    CUSTOMER,
    PERFORMER
}
