package com.viktorkuts.events.domainclientlayer.customers;

public enum PhoneType {
    HOME,
    WORK,
    MOBILE
}
